portfolio link added

--- a/public/projects.json
+++ b/public/projects.json
@@ -143,8 +143,8 @@
         "Optimized images and code splitting with Next.js",
         "Integrated EmailJS for frontend-based email functionality"
       ],
-      "liveUrl": "https://dev-as-fahim.web.app",
-      "githubUrl": "https://github.com/DevAsFahim/dev-as-fahim",
+      "liveUrl": "https://next-dev-as-fahim-7hzc.vercel.app",
+      "githubUrl": "https://github.com/DevAsFahim/next.dev-as-fahim",
       "featured": true
     },
     {
